# oreilly_polars

./: .gitignore  README.md  pyproject.toml
src/oreilly_polars/: 01_チュートリアル.ipynb  02_PandasとPolarsの違い.ipynb  03_データ型とデータ構造.ipynb  04_Eager APIとLazy API.ipynb  05_データの読み込みと書き込み.ipynb  06_Polarsの表現手法.ipynb  07_継続表現手法.ipynb  08_式の結合.ipynb  09_列の選択と作成.ipynb  10_行のフィルタリングと並び替え.ipynb  11_特殊なデータ型の操作.ipynb  __init__.py
src/oreilly_polars/01/: Untitled.ipynb
